<resources>
  <string name="app_name">Scout</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="fab_message">Display QR Code</string>
  <string name="scanner_fragment_label">Scanner Fragment</string>
  <string name="settings_fragment_label">SettingsFragment</string>
  <string name="start_fragment_label">StartFragment</string>
  <string name="action_main">Main Menu</string>
  <string name="scouting_select_text">Select your strategy position</string>
  <string name="main_title">Welcome to the Scouting app</string>
  <string name="back_to_main">Back to main page</string>
  <string name="back">Back</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="team_placeholder">Team</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="credits">Cube and Cone images from Smashicons on flaticon.com</string>
  <string name="YesNoType">YesNo</string>
  <string name="CounterType">Counter</string>
  <string name="SegmentType">Segment</string>
  <string name="ListType">List</string>
  <string name="TextType">Text</string>
  <string name="CounterMinEquals">Max and min are equal</string>
  <string name="CounterMinGreaterEqual">Max is lower to min</string>
  <string name="CounterMaxEquals">Max and min are equal</string>
  <string name="CounterMaxLessEqual">Max is lower to min</string>
  <string name="CounterDefGreater">Default is lower than min</string>
  <string name="CounterDefLess">Default is higher then max</string>
  <string name="CounterMinLessEquals">Min is higher then max</string>
  <string name="cancel">Cancel</string>
  <string name="set">Set</string>
  <string name="SegmentTextTitle">To set the text of the segments, please fill in the fields below</string>
  <string name="SegmentWarning">Min 2, Max 6</string>
  <string name="DialogAdd">Add Item</string>
  <string name="CellBuilderDialogTitle">Choose a cell type</string>
  <string name="ImportButtonTitle">Import Cells</string>
  <string name="ImportTitle">Grab the following from the clipboard?</string>
  <string name="ExportButtonTitle">Export Cells</string>
  <string name="ExportTitle">Send the following to the clipboard</string>
  <string name="AddAutoCell">Add Auto</string>
  <string name="AddTeleopCell">Add Teleop</string>
  <string name="PrefDebug_tile">Pref Debug Menu</string>
  <string name="TableDefaultTitle">Unknown Side</string>
  <string name="enter_text_for_button_1">Enter text for button 1</string>
  <string name="enter_text_for_button_2">Enter text for button 2</string>
  <string name="enter_text_for_button_3">Enter text for button 3</string>
  <string name="enter_text_for_button_4">Enter text for button 4</string>
  <string name="enter_text_for_button_5">Enter text for button 5</string>
  <string name="enter_text_for_button_6">Enter text for button 6</string>
  <string name="HintTextDefault">Hint Text</string>
  <string name="DefaultTitle">Enter a Title</string>
  <string name="example">Example</string>
  <string name="HintTextTitle">Enter hint text\n(Optional)</string>
  <string name="SegmentButtonText">Configure Button Text</string>
  <string name="ListTitle">Add item to list</string>
  <string name="preview">Preview</string>
  <string name="ListAdd">Add Item</string>
  <string name="ImagebuttonContentDesc">Cone/Cube/X Image button</string>
  <string name="tables_disabled">Tables Disabled</string>
  <string name="tables_enabled">Tables Enabled</string>
  <string name="crowd_role">Crowd Page Selected</string>
  <string name="pit_role">Pit Page Selected</string>
  <string name="two_column">2 column Enabled</string>
  <string name="one_column">1 column Enabled</string>
  <string name="DialogEdit">Complete Edit</string>

  <string name="json_string">{"Cells":3,"cellContainers":[{"Cell_Number":0,"Cell_Type":"YesNo","param":{"Cell_Default":1,"Cell_Max":10,"Cell_Min":0,"Cell_Type":"YesNo"}},{"Cell_Number":1,"Cell_Type":"Counter","param":{"Cell_Default":1,"Cell_Max":10,"Cell_Min":0,"Cell_Type":"Counter"}},{"Cell_Number":2,"Cell_Type":"Segment","param":{"Cell_Segment_Labels":["1","2","3","4","5","6"],"Cell_Segments":6,"Cell_Type":"Segment"}},{"Cell_Number":3,"Cell_Type":"List","param":{"Cell_Entry_Labels":["Java","C++","Labview"],"Cell_Total_Entries":3,"Cell_Type":"List"}}],"Dark_Theme":false,"Page_Title":"Page Title","Version":0.1}</string>
  <string name="decrement">decrement</string>
  <string name="unrecognized_cell_type">Unknown Cell Type</string>

  <string name="plus">+</string>
  <string name="minus">-</string>
  <string name="one">1</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="four">4</string>
  <string name="five">5</string>
  <string name="six">6</string>
  <string name="menu_type">Type</string>
  <string name="min_value">Min Value</string>
  <string name="max_value">Max Value</string>
  <string name="cell_title">title</string>
  <string name="cell_max">max</string>
  <string name="cell_min">min</string>
  <string name="number_of_segments">Number of Segments</string>
  <string name="import_menu">Import</string>
  <string name="export_menu">Export</string>
  <string name="save_menu">Save</string>
  <string name="reset_menu">Reset</string>
  <string name="dark_mode">Dark Mode</string>
  <string name="default_value">Default Value</string>
  <string name="show_qr">Show QR</string>
  <string name="import_layout">Import layout</string>

  <string name="role_locked">Role (Locked)</string>
  <string name="role_unlocked">Removing Lock</string>
  <string name="load_saved_layout">Load saved layout</string>
  <string name="main_team_match">Team/Match Data Loaded</string>
  <string name="table_image_content_desc">A stick figure of a person to indicate the drivers side.</string>
  <string name="reprovision">Re-provision</string>
  <string name="delete_data">Deleting Data</string>
  <string name="dont_delete_data">Not Deleting Data</string>
  <string name="qr_no_data">Team: No Data</string>
  <string name="role_qr_title">Scan the Role QR code</string>
  <string name="cycle_qr_title">Cycle through all team data</string>
  <string name="match_selector">Match Selector</string>
  <string name="brightbar_activated_title">Brightness Slider</string>
  <string name="brightbar_deactivated_title">Click to enable Brightness?</string>
  <string name="next_match">Next Match</string>
  <string name="next_team">Next Team</string>
  <string name="select_team_title">Select Team</string>
  <string name="TeamSelectType">TeamSelect</string>
  <string name="specialType">Special</string>
  <string name="amplified_speaker">Amplified Speaker</string>
  <string name="harmony">Harmony</string>
  <string name="human_player">Human Player</string>
  <string name="comments">Comments</string>
  <string name="spotlit_stage_position">Spotlit (Stage position)</string>
  <string name="settings_dashboard_hint_text">Select the X or ✓ to configure</string>
  <string name="upper_range">Upper Range</string>
  <string name="lower_range">Lower Range</string>
  <string name="google_sheets_id">Sheet/Tab ID</string>
  <string name="google_sheets_config">Google Workbook Config</string>
  <string name="name">Name</string>
  <string name="generic_data_location">Generic Data location</string>

  <!-- Camera Settings -->
  <string name="camera_settings">Camera Settings</string>
  <string name="haptic_feedback">Haptic Feedback</string>
  <string name="audio_feedback">Audio Feedback</string>
  <string name="show_reticle">Show Target Reticle</string>
  <string name="show_success_animation">Show Success Animation</string>
  <string name="auto_brightness">Auto Brightness</string>
  <string name="keep_screen_on">Keep Screen On</string>
  <string name="show_statistics">Show Statistics</string>
  <string name="exposure_compensation">Exposure Compensation</string>
  <string name="min_barcode_size">Minimum QR Code Size</string>
  <string name="center_weighted_scanning">Center-Weighted Scanning</string>
  <string name="center_threshold">Center Threshold Distance</string>
  <string name="show_fps">Show FPS Counter</string>
  <string name="show_resolution">Show Resolution</string>
  <string name="pause_scanning">Pause</string>
  <string name="resume_scanning">Resume</string>
  <string name="torch_on">Torch On</string>
  <string name="torch_off">Torch Off</string>
  <string name="zoom_level">Zoom Level</string>
  <string name="feedback_settings">Feedback Settings</string>
  <string name="display_settings">Display Settings</string>
  <string name="advanced_settings">Advanced Settings</string>
  <string name="debug_settings">Debug Settings</string>
</resources>