<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/buttonGroup_segments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sbg_divider="@color/accent_color"
        app:sbg_dividerPadding="@dimen/sbg_dividerPadding"
        app:sbg_dividerWidth="@dimen/sbg_dividerWidth"
        app:sbg_position="0"
        app:sbg_radius="2dp"
        app:sbg_ripple="true"
        app:sbg_selectedBackground="@color/accent_color"
        app:sbg_selectionAnimationDuration="250"
        app:sbg_selectionAnimationInterpolator="fastOutSlowIn">

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_one"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:autoSizeTextType="uniform"
            app:sb_selectedTextColor="@color/white"
            app:sb_text="@string/one"
            app:sb_textColor="@color/text_color"
            />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_two"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:autoSizeTextType="uniform"
            app:sb_selectedTextColor="@color/white"
            app:sb_text="@string/two"
            app:sb_textColor="@color/text_color" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_three"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:visibility="gone"
            app:autoSizeTextType="uniform"
            app:sb_selectedTextColor="@color/white"
            app:sb_text="@string/three"
            app:sb_textColor="@color/text_color" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_four"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:visibility="gone"
            app:autoSizeTextType="uniform"
            app:sb_selectedTextColor="@color/white"
            app:sb_text="@string/four"
            app:sb_textColor="@color/text_color" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_five"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:visibility="gone"
            app:autoSizeTextType="uniform"
            app:sb_selectedTextColor="@color/white"
            app:sb_text="@string/five"
            app:sb_textColor="@color/text_color" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:id="@+id/button_six"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:visibility="gone"
            app:autoSizeTextType="uniform"
            app:sb_selectedTextColor="@color/white"
            app:sb_text="@string/six"
            app:sb_textColor="@color/text_color" />
    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

</androidx.constraintlayout.widget.ConstraintLayout>