<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <Button
      android:id="@+id/button_google_range"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save_menu"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/data_title"
      />

  <TextView
      android:id="@+id/data_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/generic_data_location"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/sheet_name_text_layout"
      android:layout_width="90dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:hint="@string/name"
      android:inputType="none"
      android:textAlignment="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/data_title"
      app:boxStrokeColor="@color/accent_color"
      app:counterTextColor="@color/accent_color"
      app:hintTextColor="@color/accent_color"
      >

    <!--This is the actual edit text which takes the input-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sheet_name_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        android:textSize="11sp"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/lower_range_text_layout"
      android:layout_width="105dp"
      android:layout_height="wrap_content"
      android:hint="@string/lower_range"
      android:inputType="none"
      android:textAlignment="center"
      app:layout_constraintEnd_toStartOf="@+id/upper_range_text_layout"
      app:layout_constraintStart_toEndOf="@+id/sheet_name_text_layout"
      app:layout_constraintTop_toBottomOf="@+id/data_title"
      app:boxStrokeColor="@color/accent_color"
      app:counterTextColor="@color/accent_color"
      app:hintTextColor="@color/accent_color"
      >

    <!--This is the actual edit text which takes the input-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lower_range_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        android:textSize="11sp"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/upper_range_text_layout"
      android:layout_width="105dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:hint="@string/upper_range"
      android:inputType="none"
      android:textAlignment="center"
      app:layout_constraintEnd_toStartOf="@+id/button_google_range"
      app:layout_constraintTop_toBottomOf="@+id/data_title"
      app:boxStrokeColor="@color/accent_color"
      app:counterTextColor="@color/accent_color"
      app:hintTextColor="@color/accent_color"
      >

    <!--This is the actual edit text which takes the input-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/upper_range_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        android:textSize="11sp"
        />
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>